--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "license": "ISC",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "build:dev": "vue-tsc --noEmit && vite build --mode development",
+    "build:pro": "vue-tsc --noEmit && vite build --mode production",
     "serve": "vite preview",
     "lint": "eslint src --fix --ext .ts,.tsx,.vue,.js,.jsx",
     "prettier": "prettier --write .",
@@ -11,8 +12,10 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "naive-ui": "^2.21.2",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.0-rc.10",
+    "vfonts": "^0.1.0",
     "vue": "^3.2.2",
     "vue-router": "4"
   },
@@ -24,6 +27,8 @@
     "@typescript-eslint/parser": "^5.4.0",
     "@vitejs/plugin-vue": "^1.2.5",
     "@vue/compiler-sfc": "^3.0.5",
+    "autoprefixer": "^10.4.0",
+    "dart-sass": "^1.25.0",
     "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -31,9 +36,13 @@
     "husky": "^7.0.4",
     "lint-staged": "^12.1.2",
     "mrm": "^3.0.10",
+    "postcss": "^8.4.4",
     "prettier": "^2.4.1",
+    "sass": "^1.44.0",
+    "sass-loader": "^12.3.0",
     "typescript": "^4.5.2",
     "vite": "^2.4.2",
+    "vite-plugin-compression": "^0.3.6",
     "vite-plugin-eslint": "^1.3.0",
     "vue-tsc": "^0.0.24"
   },
